--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "vue": "^3.4.19",
+    "vue-route": "^1.5.1",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
