--- a/back-end/composer.json
+++ b/back-end/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
+        "braintree/braintree_php": "^6.17",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.19",
         "laravel/sail": "^1.0.1",
