--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
         "vite": "^2.9.11"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.5.1"
+        "@fortawesome/fontawesome-free": "^6.5.1",
+        "vue-glide-js": "^1.3.14"
     }
 }
