--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "swiper": "^11.0.7",
     "vue": "^3.4.19",
     "vue-route": "^1.5.1",
     "vue-router": "^4.3.0"
