--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
+        "chart.js": "^4.4.2",
         "swiper": "^11.0.7",
         "vue-glide-js": "^1.3.14"
     }
